@@ -59,4 +59,4 @@ may not be provided for these versions.
 * Andreas Viklund (open source XHTML layout, http://andreasviklund.com/)
 * Karim Trott (german translation)
 * Todd McGrath (help with english translation)
-
+* Satoru Kurashiki (japanese translation)
